--- a/_config.yml
+++ b/_config.yml
@@ -14,7 +14,7 @@ lang: en
 icon:  NIMHANS_logo.png 
 
 url: https://hollabharath.github.io 
-baseurl: /hollabharath 
+baseurl: 
 last_updated: true 
 
 # -----------------------------------------------------------------------------
